# join-my-ride

./: Cargo.toml  README.md  dev.Dockerfile  dev_tmux.sh  stories.md  vscode.Dockerfile
.devcontainer/: devcontainer.json
backend/: Cargo.toml
backend-rocket/: Cargo.toml
backend-rocket/src/: main.rs
backend/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: api.rs  json.rs  lib.rs  rest.rs
e2e/: Cargo.toml
e2e/tests/: join_event.rs
frontend/: Cargo.toml
frontend-seed/: Cargo.toml
frontend-seed/src/: lib.rs
frontend/src/: app.rs  component.rs  event_list.rs  event_publication.rs  lib.rs  molecules.rs  orders.rs  page.rs  pages.rs  rest.rs  url.rs
frontend/src/atoms/: button.rs  input.rs
frontend/src/component/: event.rs  event_list.rs  event_publication.rs
frontend/src/molecules/: event_details.rs  event_publication_form.rs  events_list.rs  login_bar.rs
frontend/src/page/: event.rs  main.rs
frontend/src/pages/: event.rs  login.rs  main.rs
frontend/tests/: display_all_events.rs  html_query.rs  wasm.rs
