[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
seed = "0.9.2"
async-trait = "0.1.73"
debug-cell = "0.1.1"

[dependencies.backend]
path = "../backend"

[dependencies.common]
path = "../common"

[dependencies.frontend]
path = "../frontend"
