[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Sebastien Klasa <klasa.sebastien@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

# [lib]
# name = "frontend"
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.9.2"
futures = "0.3"

[dependencies.common]
path = "../common"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
